<resources>
    <string name="app_name">MyTestAppl</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_switch_layout">Layout toggle</string>
    <string name="Gender">Gender:</string>
    <string name="Name">Name:</string>
    <string name="age">Age:</string>
    <string name="fovorite_fruit">Fovorite fruit:</string>
    <string name="eye">Eye:</string>
    <string name="gender_filter">Gender filter</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="sort_age">Sort age</string>
    <string name="sort_descend">↑</string>
    <string name="sort_ascend">↓</string>
    <string name="ErrorLoad">Failure: cant load data</string>
    <string name="reload_data">Reload data</string>
    <string name="index">Index:</string>
    <string name="balance">Balance:</string>
</resources>