<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="@android:color/holo_blue_light"
    android:orientation="vertical"
    app:cardBackgroundColor="#DCDCDC"
    app:cardCornerRadius="10dp"
    app:cardElevation="10dp"
    app:contentPadding="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        android:padding="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textViewAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="@+id/textViewName"
                app:layout_constraintTop_toBottomOf="@+id/textViewName"
                tools:text="33" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age"
                android:textSize="10sp"
                app:layout_constraintBottom_toBottomOf="@+id/textViewAge"
                app:layout_constraintStart_toStartOf="@+id/textView3" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/Name"
                android:textSize="10sp"
                app:layout_constraintBottom_toBottomOf="@+id/textViewName"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textViewName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Name"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="@+id/textViewGender"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="john hjon" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Gender"
                android:textSize="10sp"
                app:layout_constraintBottom_toBottomOf="@+id/textViewGender"
                app:layout_constraintStart_toStartOf="@+id/textView3" />

            <TextView
                android:id="@+id/textViewGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:textColor="@color/black"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textViewAge"
                tools:text="male" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
